--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>spring-boot-skeleton</name>
+	<name>poseidon-app</name>
 	<description>Demo project for Spring Boot</description>
 
 	<parent>
