--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,18 @@
+# global
+spring.application.name=poseidonApp
 
-logging.level.org.springframework=INFO
+# log
+logging.level.root=ERROR
+logging.level.com.nnk.springboot=DEBUG
 
 ################### DataSource Configuration ##########################
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/demo
+spring.datasource.url=jdbc:mysql://localhost:3306/demo?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=rootroot
 
 ################### Hibernate Configuration ##########################
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
-
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
