--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,13 @@
 # global
 spring.application.name=poseidonApp
-
 # log
-logging.level.root=ERROR
+logging.level.root=DEBUG
 logging.level.com.nnk.springboot=DEBUG
-
 ################### DataSource Configuration ##########################
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/demo?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=rootroot
-
 ################### Hibernate Configuration ##########################
-
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.show-sql=true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
