--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # global
 spring.application.name=poseidonApp
 # log
-logging.level.root=DEBUG
+logging.level.root=ERROR
 logging.level.com.nnk.springboot=DEBUG
 ################### DataSource Configuration ##########################
 spring.datasource.url=jdbc:mysql://localhost:3306/demo?useSSL=false
