--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=poseidonApp
 logging.level.root=ERROR
 logging.level.com.nnk.springboot=DEBUG
 ################### DataSource Configuration ##########################
-spring.datasource.url=jdbc:mysql://localhost:3306/demo?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/demo
 spring.datasource.username=root
 spring.datasource.password=rootroot
 ################### Hibernate Configuration ##########################
