--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.application.name=poseidonApp
 # log
 logging.level.root=ERROR
-logging.level.com.nnk.springboot=DEBUG
+logging.level.com.poseidon.app=DEBUG
 ################### DataSource Configuration ##########################
 spring.datasource.url=jdbc:mysql://localhost:3306/demo
 spring.datasource.username=root
