--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>net.guides.springboothelloworld</groupId>
-    <artifactId>spring-boot-skeleton</artifactId>
+    <groupId>com.poseidon</groupId>
+    <artifactId>app</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>poseidon-app</name>
-    <description>Demo project for Spring Boot</description>
+    <description>poseidon app</description>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
