--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.datasource.password=rootroot
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+# Github oAuth2
+spring.security.oauth2.client.registration.github.client-id=bf72d329ac171affc8e0
+spring.security.oauth2.client.registration.github.client-secret=13cfae23b930d48c41d8922eeadc32fdf30e22ef
