--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,7 @@
 
     <build>
         <plugins>
+            <!--suppress MavenModelInspection -->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
